@startuml "Conceptual Class Diagram"

' Color definitions for better organization
!define USER_COLOR #FFEBCD
!define PACKAGE_COLOR #E0FFFF
!define USAGE_COLOR #E6E6FA
!define SUPPORT_COLOR #F0FFF0
!define FEEDBACK_COLOR #FFF0F5
!define OTHER_COLOR #F5F5DC

' =================== USER DOMAIN ===================
package "User Domain"  {
  class User #USER_COLOR  {
    -id
    -name
    -email
    -password
    -phone
    -accountNumber
    -registrationDate
    -paymentMethod
  }

  class Address {
    -street
    -city
    -state
    -zipCode
    -country
  }

  class Notification {
    -id
    -type
    -message
    -date
    -read
  }
}

' =================== PACKAGE DOMAIN ===================
package "Package Domain"{
  class Package  #PACKAGE_COLOR {
    -id
    -type
    -name
    -plan
    -speed
    -router
    -addOns
    -price
    -features
    -isActive
  }

  class PackageType {
    -id
    -name
    -description
    -basePrice
  }

  class PackageOption {
    -id
    -optionType
    -optionId
    -name
    -price
  }

  class PackageAddOn {
    -addOn
  }

  class UserPackage {
    -id
    -startDate
    -endDate
    -status
  }

  class PromoCode {
    -code
    -discount
    -expiryDate
    -isValid
  }
}

' =================== USAGE DOMAIN ===================
package "Usage Domain" {
  class UsageData #USAGE_COLOR {
    -id
    -usageType
    -amount
    -date
  }

  class BillingCycle {
    -startDate
    -endDate
  }

  class PackageUsage {
    -type
    -name
    -dataUsed
    -dataTotal
    -callMinutesUsed
    -callMinutesTotal
    -smsUsed
    -smsTotal
    -downloadSpeed
    -uploadSpeed
    -devices
  }

  enum UsageType {
    DATA
    VOICE
    SMS
    ROAMING
  }
}

' =================== SUPPORT DOMAIN ===================
package "Support Domain"{
  class SupportTicket  #SUPPORT_COLOR {
    -id
    -subject
    -description
    -status
    -createdDate
    -lastUpdated
    -priority
    -resolution
  }

  class ChatMessage {
    -id
    -type
    -text
    -time
    -senderId
  }

  enum TicketStatus {
    OPEN
    IN_PROGRESS
    RESOLVED
    CLOSED
  }
}

' =================== FEEDBACK DOMAIN ===================
package "Feedback Domain"  {
  class Feedback #FEEDBACK_COLOR{
    -id
    -rating
    -topic
    -text
    -timestamp
  }
}

' =================== RELATIONSHIPS ===================

' User relationships
User "1" -- "1" Address : has >
User "1" -- "*" Notification : receives >
User "1" -- "*" UserPackage : subscribes to >
User "1" -- "*" UsageData : generates >
User "1" -- "*" SupportTicket : creates >
User "1" -- "*" Feedback : submits >

' Package relationships
Package "1" -- "1" PackageType : has type >
Package "1" -- "*" UserPackage : subscribed by >
Package "1" -- "*" UsageData : tracked in >
Package "1" -- "*" PackageAddOn : has >
PackageType "1" -- "*" PackageOption : has options >
UserPackage "*" -- "1" User : belongs to >
PromoCode -- Package : applies to >

' Usage relationships
UsageData "1" -- "1" UsageType : has type >
BillingCycle "1" -- "*" PackageUsage : contains >
PackageUsage "*" -- "1" UserPackage : measures >

' Support relationships
SupportTicket "1" -- "1" TicketStatus : has status >
SupportTicket "1" -- "*" ChatMessage : contains >
ChatMessage "*" -- "1" User : sent by >

@enduml
